--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,13 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
+    implementation "androidx.activity:activity-compose:1.3.0-alpha03"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.1"
+
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
 }
